# replayVR

./: .gitignore  CMakeLists.txt  README.md  README.txt  TODO
applications/: CMakeLists.txt  convert_bundler.cc  dump_vr180_frames.cc  ibr_render.cc  layer_refiner.cc  metadata_dump.cc  min_composite.cc  reconstruct_vr180_pano.cc  render_vr180_scene.cc  render_vr180_video.cc  separate_reflections.cc  separate_reflections_mrf.cc  test_render.cc  visualize_reconstruction.cc
cmake/: FindFFmpeg.cmake  FindGLFW3.cmake  FindMVE.cmake  FindOpenVR.cmake  OptimizeCompilerFlags.cmake
ffmpeg_mods/: mov.c  spherical.c  spherical.h
libraries/: CMakeLists.txt
libraries/SLIC/: CMakeLists.txt  SLIC.cpp  SLIC.h
libraries/gco/: CMakeLists.txt  GCoptimization.cpp
libraries/gpucontour/: common.mk
libraries/gpucontour/gpucontour/: gpucontour.cu
libraries/gpucontour/include/: filters.h
libraries/maxflow/: CMakeLists.txt  block.h  graph.cpp  graph.h  instances.inc  maxflow.cpp
libraries/tinyply/: CMakeLists.txt  tinyply.cpp  tinyply.h
libraries/triangle/: CMakeLists.txt  triangle.c  triangle.h
scripts/: .batch_refine.py.swp  Untitled.rtf  batch_refine.py  batch_run.py
src/replay/: CMakeLists.txt  mesh.cc  mesh.h
src/replay/camera/: camera.cc  camera.h  fisheye_camera.cc  fisheye_camera.h  pinhole_camera.cc  pinhole_camera.h
src/replay/depth_map/: depth_map.cc  depth_map.h
src/replay/flow/: flow_from_reprojection.cc  flow_from_reprojection.h  greedy_flow.cc  greedy_flow.h  optical_flow.cc  optical_flow.h  optical_flow_aligner.cc  optical_flow_aligner.h  optical_flow_calculator.cc  optical_flow_calculator.h  visualization.cc  visualization.h
src/replay/geometry/: mesh.cc  mesh.h  plane.cc  plane.h
src/replay/image/: colormap.cc  colormap.h  fuzzy_difference.cc  fuzzy_difference.h  image_stack_analyzer.cc  image_stack_analyzer.h  sum_absolute_difference.h  sum_absolute_difference_impl.h
src/replay/io/: byte_stream_reader.cc  byte_stream_reader.h  read_bundler.cc  read_bundler.h  read_capreal.cc  read_capreal.h  read_depth_map.cc  read_depth_map.h  read_float_image.cc  read_float_image.h  read_ply_file.cc  read_ply_file.h  spherical_video_reader.cc  spherical_video_reader.h  stream_reader.h  video_reader.cc  video_reader.h  write_depth_map.cc  write_depth_map.h  write_float_image.cc  write_float_image.h  write_ply_file.cc  write_ply_file.h  zlib_decompressor.cc  zlib_decompressor.h
src/replay/mesh/: mesh.cc  mesh.h  triangle_id_map.h
src/replay/multiview/: composite_motion_refiner.cc  composite_motion_refiner.h  composite_motion_refiner_test.cc  exposure_alignment.cc  exposure_alignment.h  layer_refiner.cc  layer_refiner.h  plane_sweep.cc  plane_sweep.h  reflection_segmenter.cc  reflection_segmenter.h
src/replay/rendering/: .min_compositor.cc.swo  .opengl_context.h.swp  depth_map_renderer.cc  depth_map_renderer.h  equirect_reprojector.cc  equirect_reprojector.h  image_based_renderer.cc  image_based_renderer.h  image_reprojector.cc  image_reprojector.h  max_compositor_sequential.cc  max_compositor_sequential.h  min_compositor.cc  min_compositor.h  min_compositor_sequential.cc  min_compositor_sequential.h  model_renderer.cc  model_renderer.h  opengl_context.cc  opengl_context.h  opengl_renderer.cc  opengl_renderer.h  stereo_video_angular_renderer.cc  stereo_video_angular_renderer.h  variance_estimator.cc  variance_estimator.h  vr180_renderer.cc  vr180_renderer.h  vr180_undistorter.cc  vr180_undistorter.h  vr_context.cc  vr_context.h
src/replay/sfm/: calibrate_from_mesh.cc  calibrate_from_mesh.h  reconstruction.cc  reconstruction.h  tracked_point.cc  tracked_point.h  triangulation.h  video_tracker.cc  video_tracker.h
src/replay/shaders/: .min_composite.fs.swo  from_equirect.fs  fuzzy_difference.fs  greedy_flow.fs  max_composite_seq.fs  mean.fs  min_composite.fs  min_composite_seq.fs  reprojector.fs  reprojector.vs  sad.fs  specular.fs  textured.fs  textured.vs  to_equirect.fs  top3_ibr.fs  vertex_colored.fs  vertex_colored.vs
src/replay/test/: test_main.cc  test_utils.h
src/replay/util/: depth_cache.cc  depth_cache.h  filesystem.cc  filesystem.h  image.cc  image.h  image_cache.cc  image_cache.h  lru_cache.cc  lru_cache.h  matrix_utils.cc  matrix_utils.h  progress_bar.cc  progress_bar.h  row_array.h  strings.cc  strings.h  timer.cc  timer.h  types.h
src/replay/vr_180/: mesh_projection_parser.cc  mesh_projection_parser.h  vr_180_video.cc  vr_180_video.h  vr_180_video_reader.cc  vr_180_video_reader.h
